// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch render basic 1`] = `
<[object Object]>
  <[object Object]>
    <[object Object]
      onChange={[Function]}
      type="checkbox"
    />
    <[object Object] />
  </[object Object]>
</[object Object]>
`;

exports[`Switch render if isActive 1`] = `
<[object Object]>
  <[object Object]
    color="default"
    variant="body1"
  >
    ON
  </[object Object]>
  <[object Object]>
    <[object Object]
      checked={true}
      onChange={[Function]}
      type="checkbox"
    />
    <[object Object] />
  </[object Object]>
  <[object Object]
    color="default"
    variant="body1"
  >
    OFF
  </[object Object]>
</[object Object]>
`;

exports[`Switch render with values 1`] = `
<[object Object]>
  <[object Object]
    color="default"
    variant="body1"
  >
    ON
  </[object Object]>
  <[object Object]>
    <[object Object]
      onChange={[Function]}
      type="checkbox"
    />
    <[object Object] />
  </[object Object]>
  <[object Object]
    color="default"
    variant="body1"
  >
    OFF
  </[object Object]>
</[object Object]>
`;
